--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -14,40 +14,39 @@
 <body>
 
 
-	<header class="headerZEN" id="up">
-		<div class="header-container-ZEN">
-			<div class="headerZEN-LEFT-img">
-                <div class="headerZEN-LEFT-img-Fill">
+	<header class="ZEN-header" id="up">
+		<div class="ZEN-header__container">
+			<div class="ZEN-header__logo">
+                <div class="ZEN-header__logo-Fill">
                     <img src="img/Fill-7.png" alt="">
                 </div>
-                <div class="headerZEN-LEFT-img-mastercard">
+                <div class="ZEN-header__logo-mastercard">
                     <img src="img/Mastercard-Logo.png" alt="">
                 </div>
             </div>
-			<div class="header-menu-ZEN menu">
-				<nav class="menu-bodyZEN">
-					<ul class="menu-listZEN">
+			<div class="ZEN-header__menu menu">
+				<nav class="ZEN-header__menu-body">
+					<ul class="ZEN-header__list">
 						<li><a href="#" class="menu-link-ZEN">Personal</a></li>
 						<li><a href="#" class="menu-link-ZEN">Business</a></li>
 			
 					</ul>
 
-					<ul class="menu-listZEN">
+					<ul class="ZEN-header__list">
 						<li><a href="#" class="menu-link-ZEN">Zenefits</a></li>
 						<li><a href="#" class="menu-link-ZEN">Features</a></li>
 						<li><a href="#" class="menu-link-ZEN">Pricing</a></li>
 			
 					</ul>
 				</nav>
-
 			</div>
 
-            <div class="headerZEN-RIGHT-button">
-                <div class="headerZEN-RIGHT-button-text">
+            <div class="ZEN-header__button">
+                <div class="ZEN-header__button-text">
                     Get app
                 </div>
             </div>
-			<div class="menu-burgerZEN">
+			<div class="ZEN-header__burgerMenu">
 				<span></span>
 			</div>
 		</div>
@@ -56,52 +55,52 @@
     
      
 
-    <div class="containerZEN">
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text">
-                <div class="sectionZEN-common-text-textUp">
+    <div class="ZEN-section">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__common-text">
+                <div class="ZEN-section__common-text-textUp">
                     <i class="far fa-play-circle"></i>
                     In every beginning, there is chaos.
                 </div>
-                <div class="sectionZEN-common-text-h1">
-                    <div class="sectionZEN-common-text-h1-1">
+                <div class="ZEN-section__common-text-h1">
+                    <div class="ZEN-section__common-text-h1-1">
                         Peaceful shopping.
                     </div>
 
-                    <div class="sectionZEN-common-text-h1-2">
+                    <div class="ZEN-section__common-text-h1-2">
                         Mindful money.
                     </div>
 
                 </div>
 
-                <div class="sectionZEN-common-text-textUnder">
+                <div class="ZEN-section__common-text-textUnder">
                     See how we can help with making your shopping experience and money management more ZEN.
                 </div>
-                <div class="sectionZEN-common-text-buttonApps">
-                    <div class="sectionZEN-common-text-buttonApps-AppStore">
+                <div class="ZEN-section__common-text-buttonApps">
+                    <div class="ZEN-section__common-text-buttonApps-AppStore">
                         <a href="https://www.apple.com/app-store/" target="_blank"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
                     </div>
-                    <div class="sectionZEN-common-text-buttonApps-GooglePlay">
+                    <div class="ZEN-section__common-text-buttonApps-GooglePlay">
                         <a href="https://play.google.com/store" target="_blank"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
 
                     </div>
                 </div>
             </div>
-            <div class="sectionZEN-img">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section1.png" alt="">
             </div>
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-img">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section2.png" alt="">
             </div>
 
-            <div class="sectionZEN-common-text ZENs2h">
-                <div class="sectionZEN-common-text-h1">
+            <div class="ZEN-section__common-text ZENs2h">
+                <div class="ZEN-section__common-text-h1">
                     1-year warranty boost
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     <p>
                         ZEN cards have a very neat feature that will help you whenever your electronic devices start
                         failing after the standard warranty ends, which is pretty common.
@@ -115,12 +114,12 @@
             </div>
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text ZENs3h">
-                <div class="sectionZEN-common-text-h1">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__common-text ZENs3h">
+                <div class="ZEN-section__common-text-h1">
                     ZEN Care
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     <p>
                         Shopping online is usually a delightful experience. Until it's not.
                     </p>
@@ -136,15 +135,15 @@
                     </p>
                 </div>
             </div>
-            <div class="sectionZEN-img">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section3.png" alt="">
             </div>
         </div>
-        <div class="sectionZEN-Cashbask">
-            <div class="sectionZEN-Cashbask-h1">
+        <div class="sectionZEN__Cashbask">
+            <div class="sectionZEN__Cashbask-h1">
                 and cashback!
             </div>
-            <div class="sectionZEN-Cashbask-text">
+            <div class="sectionZEN__Cashbask-text">
                 It saves a little bit of money while you’re shopping, but in many cases it takes ages to get anything
                 out of it. We gave
                 it a thought and made cashback way more friendly. Up to 14% of what you spend using ZEN Mastercard ®
@@ -154,49 +153,49 @@
                 use in-app cashback link.
             </div>
 
-            <div class="sectionZEN-Cashbask-button">
-                <div class="sectionZEN-Cashbask-button-text">
+            <div class="sectionZEN__Cashbask-button">
+                <div class="sectionZEN__Cashbask-button-text">
                     <a href="">Show more partners</a>
                 </div>
             </div>
         </div>
 
 
-        <div class="company">
-            <div class="company-all">
-                <div class="company-png">
+        <div class="ZEN-company">
+            <div class="ZEN-company__all">
+                <div class="ZEN-company__png">
                     <img id = Booking src="../ZEN/img/company/Booking.png" alt="" onmouseover="onMouseCompany1()"  onmouseout="outMouseCompany1()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = AliExpress src="../ZEN/img/company/AliExpress.png" alt="" onmouseover="onMouseCompany2()"  onmouseout="outMouseCompany2()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = Allegro src="../ZEN/img/company/Allegro.png" alt="" alt="" onmouseover="onMouseCompany3()"  onmouseout="outMouseCompany3()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = Zalando-lounge src="../ZEN/img/company/Zalando-lounge.png" alt="" onmouseover="onMouseCompany4()"  onmouseout="outMouseCompany4()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = Lidl src="../ZEN/img/company/Lidl.png" alt="" onmouseover="onMouseCompany5()"  onmouseout="outMouseCompany5()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = MadiaMarkt src="../ZEN/img/company/MadiaMarkt.png" alt="" onmouseover="onMouseCompany6()"  onmouseout="outMouseCompany6()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = RTV-evro-AGD src="../ZEN/img/company/RTV-evro-AGD.png" alt="" onmouseover="onMouseCompany7()"  onmouseout="outMouseCompany7()">
                 </div>
-                <div class="company-png">
+                <div class="ZEN-company__png">
                     <img id = Groupon src="../ZEN/img/company/Groupon.png" alt="" onmouseover="onMouseCompany8()"  onmouseout="outMouseCompany8()">
                 </div>
             </div>
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text ZENs4h">
-                <div class="sectionZEN-common-text-h1">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__common-text ZENs4h">
+                <div class="ZEN-section__common-text-h1">
                     ZEN shopping Mastercard
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     You shouldn’t be bound to use one card at a time, especially when it has so many benefits! With ZEN,
                     you can manage your
                     shopping and finances with both physical and virtual cards. It’s convenient, streamlined, and works
@@ -214,21 +213,21 @@
                 </div>
 
             </div>
-            <div class="sectionZEN-img">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section5.png" alt="">
             </div>
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-img">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section6.png" alt="">
             </div>
 
-            <div class="sectionZEN-common-text ZENs5h">
-                <div class="sectionZEN-common-text-h1">
+            <div class="ZEN-section__common-text ZENs5h">
+                <div class="ZEN-section__common-text-h1">
                     Shopping with no fees
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     <p>
                         Online shopping is flawed with all kind of fees. Currency exchange fees, processing fees and
                         even
@@ -246,12 +245,12 @@
 
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-common-text ZENs6h">
-                <div class="sectionZEN-common-text-h1">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__common-text ZENs6h">
+                <div class="ZEN-section__common-text-h1">
                     One app, one account, many currencies
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     <p>
                         ZEN Mastercard® was made for spending money. ZEN account is here to store and manage it
                         peacefully, from the inside of
@@ -264,20 +263,20 @@
                     </p>
                 </div>
             </div>
-            <div class="sectionZEN-img">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section7.png" alt="">
             </div>
         </div>
 
-        <div class="sectionZEN-common">
-            <div class="sectionZEN-img">
+        <div class="ZEN-section__common">
+            <div class="ZEN-section__img">
                 <img src="../ZEN/img/section8.png" alt="">
             </div>
-            <div class="sectionZEN-common-text ZENs7h">
-                <div class="sectionZEN-common-text-h1">
+            <div class="ZEN-section__common-text ZENs7h">
+                <div class="ZEN-section__common-text-h1">
                     Quick and easy account creation
                 </div>
-                <div class="sectionZEN-common-text-text">
+                <div class="ZEN-section__common-text-text">
                     <p>
                         Now, you might be thinking that it’s just like any other account creation… Long, tiresome and
                         full of endless blanks to
@@ -308,12 +307,12 @@
 
 
             <div class="footerZEN-menu">
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Learn
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <ul class="footerZEN-menu-common-content-list">
+                    <div class="footerZEN-menu__common-content">
+                        <ul class="footerZEN-menu__common-content-list">
                             <li><a href="#">Help center</a></li>
                             <li><a href="#">Join ZEN team</a></li>
                             <li><a href="#">Privacy Policy</a></li>
@@ -323,12 +322,12 @@
                     </div>
                 </div>
 
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Discover
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <ul class="footerZEN-menu-common-content-list">
+                    <div class="footerZEN-menu__common-content">
+                        <ul class="footerZEN-menu__common-content-list">
                             <li><a href="#">For developers</a></li>
                             <li><a href="#">Apple Pay</a></li>
                             <li><a href="#">Google Pay</a></li>
@@ -336,24 +335,24 @@
                     </div>
                 </div>
 
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Offer
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <ul class="footerZEN-menu-common-content-list">
+                    <div class="footerZEN-menu__common-content">
+                        <ul class="footerZEN-menu__common-content-list">
                             <li><a href="#">Business</a></li>
                             <li><a href="#">Personal</a></li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Language
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <ul class="footerZEN-menu-common-content-list">
+                    <div class="footerZEN-menu__common-content">
+                        <ul class="footerZEN-menu__common-content-list">
                             <li><a href="#">English</a></li>
                             <li><a href="#">Polish</a></li>
                         </ul>
@@ -361,24 +360,24 @@
                 </div>
 
 
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Follow us
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <div class="footerZEN-menu-common-content-img">
+                    <div class="footerZEN-menu__common-content">
+                        <div class="footerZEN-menu__common-content-img">
                             <img id = ZEN_footer src="../ZEN/img/ZEN-footer-IN.png" alt="" onmouseover="onMouseCompany9()"  onmouseout="outMouseCompany9()">
                         </div>
 
                     </div>
                 </div>
 
-                <div class="footerZEN-menu-common">
-                    <div class="footerZEN-menu-common-topic">
+                <div class="footerZEN-menu__common">
+                    <div class="footerZEN-menu__common-topic">
                         Contact
                     </div>
-                    <div class="footerZEN-menu-common-content">
-                        <div class="footerZEN-menu-common-content-email">
+                    <div class="footerZEN-menu__common-content">
+                        <div class="footerZEN-menu__common-content-email">
                             hello@zen.com
                         </div>
                     </div>
@@ -389,13 +388,13 @@
 
             </div>
 
-            <div class="footerZEN-long-img">
+            <div class="footerZEN__long-img">
                 <img src="../ZEN/img/ZEN-zero-effort.png" alt="">
             </div>
 
 
             <div class="footerZEN-under">
-                <div class="footerZEN-under-text">
+                <div class="footerZEN-under__text">
                     ZEN.COM is a licensed financial institution under the supervision of the Central Bank of Lithuania
                     approved by European Banking Authority for 31 countries. Registration number of the company
                     304749651,
@@ -404,7 +403,7 @@
                     Emilii
                     Plater 53, 00-113 Warsaw, Poland.
                 </div>
-                <div class="footerZEN-under-img">
+                <div class="footerZEN-under__img">
                     <img src="../ZEN/img/ZEN-img-in-footer.png" alt="">
                 </div>
             </div>
