--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -18,10 +18,10 @@
 		<div class="ZEN-header__container">
 			<div class="ZEN-header__logo">
                 <div class="ZEN-header__logo-Fill">
-                    <img src="img/Fill-7.png" alt="">
+                    <a href="index.html"><img src="img/Fill-7.png" alt=""></a>
                 </div>
                 <div class="ZEN-header__logo-mastercard">
-                    <img src="img/Mastercard-Logo.png" alt="">
+                    <a href="https://www.mastercard.ru/ru-ru.html"><img src="img/Mastercard-Logo.png" alt=""></a>
                 </div>
             </div>
 			<div class="ZEN-header__menu menu">
