Andrusha-site and fix ZEN

--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -205,10 +205,10 @@
 
                 <div class="sectionZEN-text-button">
                     <div class="ApplePay">
-                        <img src="../ZEN/img/ApplePay.png" alt="">
+                        <a href="https://www.apple.com/nl/apple-pay/"><img src="../ZEN/img/ApplePay.png" alt=""></a>
                     </div>
                     <div class="GooglePay">
-                        <img src="../ZEN/img/ApplePay.png" alt="">
+                        <a href="https://pay.google.com/"><img src="../ZEN/img/G_Play.png" alt=""></a>
                     </div>
                 </div>
 
