--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -111,7 +111,7 @@
 
                         
                         <div class="button_main">
-                            <a href="/figma/SOS/index.html" target="_blank">СМОТРЕТЬ</a>
+                            <a href="../figma/SOS/index.html" target="_blank">СМОТРЕТЬ</a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
 
                         
                         <div class="button_main">
-                            <a href="/figma/ZEN/index.html" target="_blank">СМОТРЕТЬ</a>
+                            <a href="../figma/ZEN/index.html" target="_blank">СМОТРЕТЬ</a>
                         </div>
                     </div>
                 </div>
