--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="img/letter_a.svg">
     <link rel="stylesheet" href="../figma/SOS/css/all.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Андрюша.рф</title>
