--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="img/letter_a.svg">
+    <link rel="icon" href="img/letter_a.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="stylesheet" href="../figma/SOS/css/all.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Андрюша.рф</title>
@@ -202,7 +205,7 @@
                        
                         
                         <div class="button_main">
-                            <a href="../../app/Calc-on-iPhone-JS/index.html">Запустить</a>
+                            <a href="../../app/Calc-on-iPhone-JS/index.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "560px"}}}'>Запустить</a>
                         </div>
                     </div>
                 </div>
@@ -213,10 +216,12 @@
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
 
-
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="../Andrusha-main/js/catalog.js"></script>
 
 </body>
