--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -205,7 +205,7 @@
                        
                         
                         <div class="button_main">
-                            <a href="../../app/Calc-on-iPhone-JS/index.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "560px"}}}'>Запустить</a>
+                            <a href="/../app/Calc-on-iPhone-JS/index.html" data-fancybox data-options='{"type" : "iframe", "iframe" : {"preload" : false, "css" : {"width" : "560px"}}}'>Запустить</a>
                         </div>
                     </div>
                 </div>
