--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/Meditation-logo.svg">
-    <link rel="stylesheet" href="../figma/SOS/css/all.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../SOS/css/all.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>Meditation</title>
 </head>
 <body>
-    
+    <section class="Meditation-One">
+        <h1 class="Meditation-One__h1">
+            Meditations Helps You
+            <br>
+            Detoxify Your Body
+        </h1>
+        <div class="Meditation-One__img">
+            <img src="../Mediation/img/Meditation-One-img.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
