--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -16,6 +16,11 @@
             <br>
             Detoxify Your Body
         </h1>
+        <div class="Meditation-One__under-text">
+            “It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout point of using Lorem Ipsum is that it has a more-or-less.”
+        </div>
+        <a href="#" class="Get-Start">Get Start</a>
+        
         <div class="Meditation-One__img">
             <img src="../Mediation/img/Meditation-One-img.png" alt="">
         </div>
