--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -10,10 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css">
     <link rel="stylesheet" href="../figma/SOS/css/all.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Андрюша.рф</title>
+    <title>Андрюша</title>
 </head>
 <body>
     <div class="container">
+        <h2 class="title">Junior фронтенд разработчик</h2>
+        <section class="person">
+            
+            <div class="person-item__img">
+                <img src="../Andrusha-main/img/humster.jpg" alt="">
+            </div>
+            <div class="person-item">
+                <div class="person-item__text">
+                    Ершов Андрей
+                </div>
+            </div>
+        </section>
+
         <section class="education">
             <h2 class="title">Образование</h2>
             <div class="education-inner">
