--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>Meditation</title>
 </head>
-<body>
+<body class="Meditation-color">
     <section class="Meditation-One">
         <h1 class="Meditation-One__h1">
             Meditations Helps You
@@ -24,6 +24,74 @@
         <div class="Meditation-One__img">
             <img src="../Mediation/img/Meditation-One-img.png" alt="">
         </div>
+    </section>
+    <section class="Meditation-container">
+        <div class="Meditation-wrapper">
+            <div class="paper paper-1">
+                <img src="../Mediation/img/paper-img-1.svg" alt="">
+                <div class="paper-title">
+                    Meditation
+                </div>
+                <div class="paper-text">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
+                </div>
+                <a href="#" class="paper-button">Learn More</a>
+            </div>
+
+
+            <div class="paper paper-2">
+                <img src="../Mediation/img/paper-img-2.svg" alt="">
+                <div class="paper-title">
+                    Yoga
+                </div>
+                <div class="paper-text">
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                </div>
+                <a href="#" class="paper-button">Learn More</a>
+            </div>
+
+            <div class="paper paper-3">
+                <img src="../Mediation/img/paper-img-3.svg" alt="">
+                <div class="paper-title">
+                    Sound
+                </div>
+                <div class="paper-text">
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing.
+                </div>
+                <a href="#" class="paper-button">Learn More</a>
+            </div>
+        </div>
+
+        <div class="Meditation-title-2">
+            Practice Wherever You Want, Whenever You Need
+        </div>
+        <div class="Meditation-subtitle">
+            “These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best.”
+        </div>
+
+        <div class="Meditation-wrapper">
+            <div class="Meditation-item">
+                <img src="../Mediation/img/frog.svg" alt="">
+            </div>
+            <div class="Meditation-item">
+                <div class="Meditation-item__article-wrapper">
+                    <div class="title">
+                        Meditation Wind
+                    </div>
+                    <div class="text">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="Meditation-title-2">
+            Take a Deep Breath
+        </div>
+        <div class="Meditation-subtitle">
+            “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore.”
+        </div>
+
     </section>
 </body>
 </html>
