--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -92,6 +92,27 @@
             “Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore.”
         </div>
 
+        <div class="Meditation-music">
+            <div class="Meditation-music__list">
+
+                <div class="Meditation-music__item">
+                    <div class="title">
+                        Turning off Auto Pilot
+                    </div>
+                    <div class="text">
+                        Intriduction, Strees Assesment
+                    </div>
+                    <div class="player">
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="Meditation-music__img">
+                <img src="../Mediation/img/Priest.svg" alt="">
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
