--- a/Andrusha-main/index.html
+++ b/Andrusha-main/index.html
@@ -121,7 +121,7 @@
                             </div>
 
                             <div class="button_layout">
-                                <a href="https://www.figma.com/file/lCW3yN1qsuzleM6Q3SXk1k/SOS?node-id=1%3A2" target="_blank">макет</a>
+                                <a href="https://www.figma.com/file/tiZx1DOQI8uGgUjqG6w1Ag/" target="_blank">макет</a>
                             </div>
                         </div>
 
