--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -113,6 +113,18 @@
             </div>
         </div>
 
+
+
     </section>
+
+
+    <div class="Meditation-best">
+        <div class="Meditation-title-2">
+            The Best Of Meditation
+        </div>
+        <div class="Meditation-subtitle">
+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+        </div>
+    </div>
 </body>
 </html>
