--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -125,6 +125,76 @@
         <div class="Meditation-subtitle">
             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
         </div>
+
+
+        <div class="Meditation-best__wrapper">
+            <div class="Meditation-best-left">
+                <div class="Meditation-best-left__item">
+                    <div class="Meditation-best-left__item-title">
+                        The Peace
+                    </div>
+                    <div class="Meditation-best-left__item-text">
+                        which of us ever undertakes laborious physical exercise, except to obtain some advantage from it.
+                    </div>
+                </div>
+
+                <div class="Meditation-best-left__item">
+                    <div class="Meditation-best-left__item-title">
+                        Strength Building
+                    </div>
+                    <div class="Meditation-best-left__item-text">
+                        Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore.
+                    </div>
+                </div>
+
+                <div class="Meditation-best-left__item">
+                    <div class="Meditation-best-left__item-title">
+                        Quick Relextion
+                    </div>
+                    <div class="Meditation-best-left__item-text">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </div>
+                </div>
+            </div>
+
+            <div class="Meditation-best__img">
+                <img src="../Mediation/img/Meditation-best__img.svg" alt="">
+            </div>
+
+            <div class="Meditation-best-right">
+                <div class="Meditation-best-right__item">
+                    <div class="Meditation-best-right__item-title">
+                        Relex & Refresh
+                    </div>
+                    <div class="Meditation-best-right__item-text">
+                        The generated Lorem Ipsum is therefore always free from repetition, injected humour.
+                    </div>
+                </div>
+
+
+                <div class="Meditation-best-right__item">
+                    <div class="Meditation-best-right__item-title">
+                        Beauty Of Body
+                    </div>
+                    <div class="Meditation-best-right__item-text">
+                        Various versions have evolved over the years  sometimes by accident sometimes on purpose injected humour and the like.
+                    </div>
+                </div>
+
+                <div class="Meditation-best-right__item">
+                    <div class="Meditation-best-right__item-title">
+                        Strees Relief
+                    </div>
+                    <div class="Meditation-best-right__item-text">
+                        Neque porro quisquam est qui dolorem ipsum quia dolor sit amet consectetur adipisci velit.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 </body>
 </html>
