--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -191,10 +191,68 @@
                 </div>
             </div>
         </div>
+    </div>
 
 
-
+    <div class="Meditation-title-2">
+        Transform Your Body, Mind and Life Today
 
     </div>
+    <div class="Meditation-subtitle">
+        "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque orrupti quos  sint occaecati cupiditate non provident.”
+    </div>
+
+    <div class="gym">
+        <div class="gym-img">
+            <img src="../Mediation/img/gym.svg" alt="">
+        </div>
+        <div class="gym-item">
+            <div class="gym-item__title">
+                Antistrees Meditation
+            </div>
+            <div class="gym-item__text">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
+                <br>
+                These cases are perfectly simple and easy to distinguish. In a free hour when our power of choice is untrammelled.
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="gym">
+
+        <div class="gym-item">
+            <div class="gym-item__title">
+                Backyark Band Meditation
+            </div>
+            <div class="gym-item__text">
+                To take a trivial example, which of us ever undertakes laborious physical exercise except to obtain some advantage from it...
+                <br>
+                The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+            </div>
+        </div>
+
+        <div class="gym-img">
+            <img src="../Mediation/img/gym2.svg" alt="">
+        </div>
+
+    </div>
+
+    <footer class="Meditation-footer">
+        <div class="Meditation-footer__img">
+            <img src="../Mediation/img/footer-img.svg" alt="">
+        </div>
+
+        <div class="Meditation-footer__menu">
+            Home
+        </div>
+
+        <div class="Meditation-footer__logos">
+            <img src="../Mediation/img/logo-1.svg" alt="">
+            <img src="../Mediation/img/logo-2.svg" alt="">
+            <img src="../Mediation/img/logo-3.svg" alt="">
+        </div>
+    </footer>
 </body>
 </html>
