--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -220,7 +220,7 @@
     </div>
 
 
-    <div class="gym">
+    <div class="gym gym-reverse">
 
         <div class="gym-item">
             <div class="gym-item__title">
@@ -245,13 +245,23 @@
         </div>
 
         <div class="Meditation-footer__menu">
-            Home
+            <a href="#">Home</a>
+            <div class="Meditation-footer__menu-line"></div>
+            <a href="#">Explore</a>
+            <div class="Meditation-footer__menu-line"></div>
+            <a href="#">Classes</a>
+            <div class="Meditation-footer__menu-line"></div>
+            <a href="#">Privacy</a>
+            <div class="Meditation-footer__menu-line"></div>
+            <a href="#">Services</a>
         </div>
 
+       
+
         <div class="Meditation-footer__logos">
-            <img src="../Mediation/img/logo-1.svg" alt="">
-            <img src="../Mediation/img/logo-2.svg" alt="">
-            <img src="../Mediation/img/logo-3.svg" alt="">
+            <a href="https://www.facebook.com/"><img src="../Mediation/img/logo-1.svg" alt=""></a>
+            <a href="https://www.instagram.com/"><img src="../Mediation/img/logo-2.svg" alt=""></a>
+            <a href="https://twitter.com/"><img src="../Mediation/img/logo-3.svg" alt=""></a>
         </div>
     </footer>
 </body>
