--- a/figma/Mediation/index.html
+++ b/figma/Mediation/index.html
@@ -10,6 +10,13 @@
     <title>Meditation</title>
 </head>
 <body class="Meditation-color">
+    <header class="Meditation-header">
+        <a href="../Mediation/index.html"><img src="../Mediation/img/Mediation-header__logo.svg" alt=""></a>
+        <div class="Meditation-header__menu">
+            
+        </div>
+    </header>
+
     <section class="Meditation-One">
         <h1 class="Meditation-One__h1">
             Meditations Helps You
@@ -73,13 +80,37 @@
             <div class="Meditation-item">
                 <img src="../Mediation/img/frog.svg" alt="">
             </div>
-            <div class="Meditation-item">
-                <div class="Meditation-item__article-wrapper">
-                    <div class="title">
-                        Meditation Wind
+            <div class="Meditation-item__wrapper">
+                <div class="Meditation-item">
+                    <div class="Meditation-item__article Meditation-item__article-active">
+                        <div class="Meditation-item__article-title">
+                            Meditation Wind
+                        </div>
+                        <div class="Meditation-item__article-text">
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
+                        </div>
                     </div>
-                    <div class="text">
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected.
+                </div>
+
+                <div class="Meditation-item">
+                    <div class="Meditation-item__article">
+                        <div class="Meditation-item__article-title">
+                            Strees Reduction
+                        </div>
+                        <div class="Meditation-item__article-text">
+                            Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally can procure him some great pleasure.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="Meditation-item">
+                    <div class="Meditation-item__article">
+                        <div class="Meditation-item__article-title">
+                            Self Compassion
+                        </div>
+                        <div class="Meditation-item__article-text">
+                            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
+                        </div>
                     </div>
                 </div>
             </div>
@@ -241,7 +272,7 @@
 
     <footer class="Meditation-footer">
         <div class="Meditation-footer__img">
-            <img src="../Mediation/img/footer-img.svg" alt="">
+            <a href="../Mediation/index.html"> <img src="../Mediation/img/footer-img.svg" alt=""></a>
         </div>
 
         <div class="Meditation-footer__menu">
